--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,3 +1,30 @@
 .header {
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 45px;
+  max-width: calc(100% - 400px);
+  min-height: 74px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .header {
+    max-width: calc(100% - 300px);
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .header {
+    max-width: calc(100% - 200px);
+  }
+}
+
+@media (max-width: 767px) {
+  .header {
+    max-width: 100%;
+    min-height: 56px;
+    margin-top: 28px;
+  }
 }
