--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,14 @@
 @import url(../vendor/normalize.css);
 
+@import url(../blocks/border.css);
+
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__line/header__line.css);
+
+@import url(../blocks/profile/profile.css);
 
 @import url(../vendor/fonts.css);
