--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,4 +3,29 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 40px;
+  max-width: calc(100% - 400px);
+  min-height: 120px;
+  position: relative;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .profile {
+    max-width: calc(100% - 300px);
+  }
+}
+
+@media (min-width: 900px) and (max-width: 1023px) {
+  .profile {
+    max-width: calc(100% - 200px);
+  }
+}
+
+@media (max-width: 899px) {
+  .profile {
+    flex-direction: column;
+    align-items: center;
+    max-width: calc(100% - 38px);
+    min-height: 286px;
+    margin-top: 42px;
+  }
 }
