--- a/pages/index.css
+++ b/pages/index.css
@@ -10,5 +10,12 @@
 @import url(../blocks/header/__line/header__line.css);
 
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__profile-info/profile__profile-info.css);
+@import url(../blocks/profile/__profile-info/_name-change/profile__profile-info_name-change.css);
+@import url(../blocks/profile/__profile-info/_name/profile__profile-info_name.css);
+@import url(../blocks/profile/__profile-info/_button/profile__profile-info_button.css);
+@import url(../blocks/profile/__profile-info/_activity/profile__profile-info_activity.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
 
 @import url(../vendor/fonts.css);
