--- a/blocks/header/__line/header__line.css
+++ b/blocks/header/__line/header__line.css
@@ -1,7 +1,7 @@
 .header__line {
-  min-width: 100%;
-  opacity: 0.7;
-  border: 1px solid #545454;
   margin: 0 0;
   padding: 0 0;
+  max-width: 100%;
+  opacity: 0.7;
+  border: 1px solid #545454;
 }
