profile-info_activity bugs fixed

--- a/blocks/profile/__profile-info/_activity/profile__profile-info_activity.css
+++ b/blocks/profile/__profile-info/_activity/profile__profile-info_activity.css
@@ -8,7 +8,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-height: 18px;
+  /* max-height: 18px; */
   max-width: 398px;
 }
 
