--- a/blocks/popup/__window/popup__window.css
+++ b/blocks/popup/__window/popup__window.css
@@ -1,4 +1,6 @@
 .popup__window {
+  display: flex;
+  flex-direction: column;
   position: relative;
   border-radius: 10px;
   background-color: #fff;
