--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,6 @@
 .profile__edit-button {
+  margin: 0 0;
+  padding: 0 0;
   width: 24px;
   height: 24px;
   cursor: pointer;
@@ -6,7 +8,6 @@
   background-size: cover;
   background-color: #000;
   border: 0;
-  /* outline: none; */
   margin-top: 15px;
 }
 
@@ -15,6 +16,8 @@
     width: 18px;
     height: 18px;
     margin-top: 8px;
+    box-sizing: border-box;
+    justify-self: end;
   }
 }
 
