--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,11 +1,12 @@
 .profile {
-  display: flex;
+  display: grid;
   margin-left: auto;
   margin-right: auto;
   margin-top: 40px;
   max-width: calc(100% - 400px);
   min-height: 120px;
-  position: relative;
+  grid-template-columns: min-content minmax(min-content, max-content) 1fr;
+  grid-template-rows: 1fr;
 }
 
 @media (min-width: 1024px) and (max-width: 1279px) {
@@ -16,14 +17,15 @@
 
 @media (min-width: 900px) and (max-width: 1023px) {
   .profile {
-    max-width: calc(100% - 200px);
+    max-width: calc(100% - 100px);
   }
 }
 
 @media (max-width: 899px) {
   .profile {
-    flex-direction: column;
-    align-items: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content minmax(min-content, max-content) 1fr;
+    min-width: 282px;
     max-width: calc(100% - 38px);
     min-height: 286px;
     margin-top: 42px;
