--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,6 +7,7 @@
   min-height: 74px;
   flex-direction: column;
   justify-content: space-between;
+  border-bottom: 1px solid rgba(54, 54, 54, 0.7);
 }
 
 @media (min-width: 1024px) and (max-width: 1279px) {
@@ -17,7 +18,7 @@
 
 @media (min-width: 900px) and (max-width: 1023px) {
   .header {
-    max-width: calc(100% - 200px);
+    max-width: calc(100% - 100px);
   }
 }
 
