--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -7,6 +7,7 @@
   line-height: 29px;
   color: #000;
   margin-bottom: 48px;
+  margin: 34px 36px 48px;
 }
 
 @media (max-width: 899px) {
@@ -16,5 +17,8 @@
     font-size: 18px;
     line-height: 22px;
     margin-bottom: 75px;
+    margin-top: 25px;
+    margin-left: 22px;
+    margin-right: 22px;
   }
 }
