--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,6 @@
 .profile__add-button {
+  padding: 0 0;
+  margin: 0 0;
   width: 150px;
   height: 50px;
   cursor: pointer;
@@ -7,11 +9,9 @@
   background-position: 50% 50%;
   background-color: #000;
   border: 2px solid #FFFFFF;
-  box-sizing: border-box;
   border-radius: 2px;
   align-self: center;
-  position: absolute;
-  right: 0;
+  justify-self: end;
 }
 
 @media (max-width: 899px) {
