--- a/blocks/profile/__profile-info/profile__profile-info.css
+++ b/blocks/profile/__profile-info/profile__profile-info.css
@@ -7,6 +7,7 @@
   margin-left: 30px;
   margin-top: 22px;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 
 @media (max-width: 899px) {
