--- a/pages/index.css
+++ b/pages/index.css
@@ -3,9 +3,10 @@
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 
+@import url(../blocks/content/content.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/__line/header__line.css);
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
@@ -18,10 +19,10 @@
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
-@import url(../blocks/element/__mask-group/element__mask-group.css);
+@import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__description/element__description.css);
 @import url(../blocks/element/__place/element__place.css);
-@import url(../blocks/element/__group/element__group.css);
+@import url(../blocks/element/__like/element__like.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -29,11 +30,11 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__window/popup__window.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
-@import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/__input-container/popup__input-container.css);
-@import url(../blocks/popup/__name/popup__name.css);
-@import url(../blocks/popup/__activity/popup__activity.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_data/popup__input_data_name.css);
+@import url(../blocks/popup/__input/_data/popup__input_data_activity.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 
 @import url(../blocks/popup/_opened/popup_opened.css);
