--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,7 +6,10 @@
   font-size: 24px;
   line-height: 29px;
   color: #000;
-  margin: 34px 36px 48px;
+  margin-left: 36px;
+  margin-right: 36px;
+  margin-top: 34px;
+  margin-bottom: 48px;
 }
 
 @media (max-width: 899px) {
