rewiev2 (recommit) all bugs has been fixed

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -16,11 +16,10 @@
 
 @media (max-width: 899px) {
   .profile__add-button {
-    position: static;
     width: 100%;
     align-self: flex-end;
-    background-image: url("../../../images/Add_button_mobile.svg");
     margin-top: 36px;
+    background-size: 16px;
   }
 }
 
