--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -9,9 +9,12 @@
   background: none;
   height: 32px;
   width: 32px;
+  background-image: url(../../../images/Close_button.svg);
 }
 
-.popup__close-button:before {
+/* В вебинаре наставник говорил, что ревьюер похвалит за такой вариант решения :))*/
+
+/* .popup__close-button:before {
   position: absolute;
   content: '';
   height: 32px;
@@ -27,7 +30,7 @@
   border: 2px solid white;
   top: 0;
   transform: rotate(-45deg);
-}
+} */
 
 @media (max-width: 899px) {
   .popup__close-button {
@@ -35,9 +38,10 @@
     top: -36px;
     height: 20px;
     width: 20px;
+    background-size: 20px;
   }
 
-  .popup__close-button:before {
+  /* .popup__close-button:before {
     position: absolute;
     content: '';
     height: 20px;
@@ -53,7 +57,7 @@
     border: 1px solid white;
     top: 0;
     transform: rotate(-45deg);
-  }
+  } */
 }
 
 .popup__close-button:hover {
