rewiev3 all bugs fixed

--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,3 +1,4 @@
 .body {
-	background-color: #000000;
+	background-color: #000;
 }
+/* у меня в visual studio два отступа, не помнимаю в чем проблема */
