--- a/blocks/element/__like/_active/element__like_active.css
+++ b/blocks/element/__like/_active/element__like_active.css
@@ -1,3 +1,4 @@
 .element__like_active {
-  background-color: #000;
+  background-image: url(../../../../images/Like_button_active.svg);
+  background-size: cover;
 }
