New card adds at the first position. Added toggle like button. And added delete button layout

--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
+@import url(../blocks/element/__delete-button/element__delete-button.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__description/element__description.css);
 @import url(../blocks/element/__place/element__place.css);
