--- a/pages/index.css
+++ b/pages/index.css
@@ -39,4 +39,10 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 
+@import url(../blocks/popup-image/popup-image.css);
+@import url(../blocks/popup-image/__window/popup-image__window.css);
+@import url(../blocks/popup-image/__image/popup-image__image.css);
+@import url(../blocks/popup-image/__close-button/popup-image__close-button.css);
+@import url(../blocks/popup-image/__title/popup-image__title.css);
+
 @import url(../blocks/popup/_opened/popup_opened.css);
