some of bugs has been fixed: let->const, variable names changed, popup image layout changed, added modificator for popup profile

--- a/pages/index.css
+++ b/pages/index.css
@@ -32,17 +32,21 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_image/popup_image.css);
 @import url(../blocks/popup/__window/popup__window.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__image-window/popup__image-window.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__title-image/popup__title-image.css);
 
-@import url(../blocks/popup-image/popup-image.css);
-@import url(../blocks/popup-image/__window/popup-image__window.css);
-@import url(../blocks/popup-image/__image/popup-image__image.css);
-@import url(../blocks/popup-image/__close-button/popup-image__close-button.css);
-@import url(../blocks/popup-image/__title/popup-image__title.css);
+/* @import url(../blocks/popup-image/popup-image.css); */
+/* @import url(../blocks/popup-image/__window/popup-image__window.css); */
+/* @import url(../blocks/popup-image/__image/popup-image__image.css); */
+/* @import url(../blocks/popup-image/__close-button/popup-image__close-button.css); */
+/* @import url(../blocks/popup-image/__title/popup-image__title.css); */
 
 @import url(../blocks/popup/_opened/popup_opened.css);
