--- a/src/blocks/element/__description/element__description.css
+++ b/src/blocks/element/__description/element__description.css
@@ -2,8 +2,9 @@
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  width: calc(100% - 38px);
-  padding-left: 3px;
+  /* width: calc(100% - 38px); */
+  width: 240px;
+  /* padding-left: 3px; */
   justify-content: space-between;
   margin-top: 25px;
   margin-bottom: 25px;
