--- a/src/blocks/element/__like/element__like.css
+++ b/src/blocks/element/__like/element__like.css
@@ -5,8 +5,8 @@
   background-size: cover;
   background-color: #fff;
   border: 0;
-  margin-top: 5px;
-  margin-right: 5px;
+  /* margin-top: 5px;
+  margin-right: 5px; */
   cursor: pointer;
 }
 
