--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -40,6 +40,9 @@
 @import url(../blocks/popup/__window/popup__window.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
+
+@import url(../blocks/popup/__title/_confirmation/popup__title_confirmation.css);
+
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
