all bugs fixed into (Api, Card, PopupWithForm, PopupWithConfirm, Section, UserInfo.js, index.js, constants.js; body.css, element.css)

--- a/src/blocks/elements/elements.css
+++ b/src/blocks/elements/elements.css
@@ -2,7 +2,7 @@
   display: grid;
   margin-left: auto;
   margin-right: auto;
-  grid-auto-rows: 1fr;
+  /* grid-auto-rows: 1fr; */
   max-width: calc(100% - 400px);
   margin-top: 51px;
   grid-template-columns: repeat(auto-fit, 282px);
